<resources>
    <string name="app_name">SaloonProjeto</string>
    <string name="logo_saloon">Logo do App Saloon</string>
    <string name="cadastro">Cadastro</string>
    <string name="cliente">CLIENTE</string>
    <string name="salao">SALÃO</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="seu_nome_completo">Seu nome completo</string>
    <string name="nome_do_salao">Nome do Salão</string>
    <string name="nome_do_seu_salao">Nome do seu salão</string>
    <string name="endereco_do_salao">Endereço do Salão</string>
    <string name="ex_rua_numero_bairro">Ex: Rua, Número, Bairro</string>
    <string name="telefone">Telefone</string>
    <string name="ex_telefone">(XX) XXXXX-XXXX</string>
    <string name="email">Email</string>
    <string name="ex_email">seuemail@exemplo.com</string>
    <string name="senha">Senha</string>
    <string name="crie_uma_senha_forte">Crie uma senha forte</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="ja_tem_conta">Já tem conta? Fazer Login</string>
    <string name="login">Login</string>
    <string name="sua_senha">Sua senha</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="foto_do_usuario">Foto do usuário</string>
    <string name="ola">Olá,</string>
    <string name="nome_do_usuario">Nome do usuário</string>
    <string name="saloes_disponiveis">Salões Disponíveis</string>
    <string name="horarios_disponiveis">Horários Disponíveis:</string>
    <string name="confirmar_agendamento">Confirmar Agendamento</string>
    <string name="seta_para_voltar">Seta para voltar</string>
    <string name="agendar_horario">Agendar Horário</string>
    <string name="salao_agendado">Salão:</string>
    <string name="servico">Serviço:</string>
    <string name="data">Data:</string>
    <string name="hoje">Hoje</string>
    <string name="amanha">Amanhã</string>
    <string name="gerenciar_servicos">Gerenciar Serviços</string>
    <string name="meus_servicos">Meus Serviços</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="salvar_alteracoes">Salvar Alterações</string>
    <string name="endereco">Endereço</string>
    <string name="sair">Sair</string>
    <string name="dia_label">Dia</string>
    <string name="abre_hint">Abre (08:00)</string>
    <string name="fecha_hint">Fecha (18:00)</string>
    <string name="fechado_label">Fechado</string>
    <string name="selecionar_data">Selecione uma data</string>
    <string name="escolher_data">Escolher data</string>
    <string name="carregar_horarios">Carregar horários</string>
    <string name="definir_horarios_salao">Definir horários do salão</string>
    <string name="escolher_foto">Escolher uma foto</string>
    <string name="salvar_continuar">Salvar e continuar</string>
    <string name="adicione_foto_perfil">Para personalizar seu perfil, adicione uma foto</string>
    <string name="gerenciar_horarios">Gerenciar Horários</string>
    <string name="lista_horarios">Lista de horários disponíveis do salão</string>
</resources>